<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallBlocker</string>
    <string name="action_settings">Settings</string>
    <string name="tab_blacklist">Blacklist</string>
    <string name="tab_blocked_calls">Blocked Calls</string>
    <string name="tab_settings">Settings</string>
    <string name="msg_loading_contacts">Loading contacts. Please wait...</string>
    <string name="msg_loading_logs">Loading logs. Please wait...</string>
    <string name="msg_no_entries_present">No entries present</string>

    <!-- FrgBlacklist -->
    <string name="title_blacklisted_contacts">Blacklisted Contacts (%d)</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_call_logs">Call Logs</string>

    <!-- FrgBlockedCalls -->
    <string name="title_blocked_calls">Blocked Calls (%d)</string>

    <!-- FrgSettings -->
    <string name="title_settings">Settings</string>
    <string name="lbl_show_dialog_for_unknown_numbers">Show dialog for unknown numbers</string>
    <string name="lbl_show_notification_for_blocked_calls">Show notifications for blocked calls</string>

    <!-- Add number to blacklist dialog -->
    <string name="dlg_title_add_contact_to_blacklist">Add contact to Blacklist</string>
    <string name="lbl_enter_name">Enter Name</string>
    <string name="lbl_enter_phone_number">Enter Phone number</string>
    <string name="dlg_btn_add">Add</string>
    <string name="dlg_btn_cancel">Cancel</string>
    <string name="lbl_unknown">Unknown</string>
    <string name="err_enter_phone_number">Please enter phone number</string>
    <string name="msg_contact_added_to_blacklist">%1$d out of %2$d contacts added to blacklist.</string>

    <plurals name="msg_blocked_calls">
        <item quantity="one">%d call has been blocked</item>
        <item quantity="other">%d calls has been blocked</item>
    </plurals>
    
    <!-- Unknown number actions dialog -->
    <string name="msg_block_contact">This number is not found in your address book. Do you want to block this number?</string>
    <string name="dlg_btn_block">Block</string>
    <string name="dlg_btn_ignore">Ignore this time</string>
</resources>