<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="10dip" >

    <TextView
        style="@style/tv_label"
        android:layout_marginTop="5dip"
        android:text="@string/lbl_enter_name" />

    <EditText
        android:id="@+id/et_name"
        style="@style/edit_text" />

    <TextView
        style="@style/tv_label"
        android:layout_marginTop="5dip"
        android:text="@string/lbl_enter_phone_number" />

    <EditText
        android:id="@+id/et_phone_number"
        style="@style/edit_text"
        android:digits="0123456789"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dlg_btn_add"
            style="@style/bottom_bar_button"
            android:layout_marginRight="1dp"
            android:text="@string/dlg_btn_add" />

        <Button
            android:id="@+id/dlg_btn_cancel"
            style="@style/bottom_bar_button"
            android:text="@string/dlg_btn_cancel" />
    </LinearLayout>

</LinearLayout>