<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        style="@style/tv_label"
        android:layout_marginTop="5dip"
        android:text="@string/msg_block_contact" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dlg_btn_block"
            style="@style/bottom_bar_button"
            android:layout_marginRight="1dp"
            android:text="@string/dlg_btn_block" />

        <Button
            android:id="@+id/dlg_btn_ignore"
            style="@style/bottom_bar_button"
            android:text="@string/dlg_btn_ignore" />
    </LinearLayout>

</LinearLayout>